src/index.css
@import "tailwindcss";

@font-face {
    font-family: "Gilroy";
    src: url("/fonts/Gilroy.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

* {
    scroll-behavior: smooth;
}

input[type="number"] {
    -moz-appearance: textfield; 
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

@layer base {
    html {
        font-family: "Gilroy",
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        sans-serif;
    }

    body {
        font-family: inherit;
    }
}

.carousel-track {
    display: flex;
    align-items: center;
    gap: 64px;
    width: max-content;

    animation: scroll 25s linear infinite;

    will-change: transform;
    transform: translateZ(0);           
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.carousel-track.paused {
    animation-play-state: paused;
}

@keyframes scroll {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(-50%);
    }
}

